--- a/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
+++ b/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
@@ -1,55 +1,20 @@
-<html>
+<html xmlns:date="http://exslt.org/dates-and-times">
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
 <h1 style="font-size:20pt;color:#FF0000">IP-Adressen der Server</h1>
+<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Mittwoch, 07. Juni 2023 22:49:19</h2>
 <table id="tableWithIpNr">
 <tr>
-<th>
-    			Servername
-    		</th><th>
-    			IP-Adresse
-    		</th><th>
-    			IP-Port 4 Connection
-    		</th><th>
-    			IP-Port 4 Listening
-    		</th><th>
-    			IP-Datum
-    		</th><th>
-    			IP-Uhrzeit
-    		</th>
+<th>Servername</th><th>IPNr</th><th>IP-Port 4 Connection</th><th>IP-Port 4 Listening</th><th>IP-Datum</th><th>IP-Uhrzeit</th>
 </tr>
 <tr>
-<td>
-    			test1
-    		</td><td>
-    			79.196.199.114
-    		</td><td>
-    			5000
-    		</td><td>
-    			5001
-    		</td><td>
-    			2017-1-4
-    		</td><td>
-    			9:32
-    		</td>
+<td headers="">test1</td><td headers="IPNr"><a href="79.196.199.114">79.196.199.114</a></td><td headers="">5000</td><td headers="">5001</td><td headers="">2017-1-4</td><td headers="">9:32</td>
 </tr>
 <tr>
-<td>
-    			test2
-    		</td><td>
-    			79.196.199.222
-    		</td><td>
-    			5002
-    		</td><td>
-    			5012
-    		</td><td>
-    			2017-1-5
-    		</td><td>
-    			9:59
-    		</td>
+<td headers="">neuer test</td><td headers="IPNr"><a href="79.196.199.222">79.196.199.222</a></td><td headers="">5002</td><td headers="">5012</td><td headers="">2017-1-5</td><td headers="">9:59</td>
 </tr>
 </table>
 </body>
