--- a/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
+++ b/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <h1 style="font-size:20pt;color:#FF0000">IP-Adressen der Server</h1>
-<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Mittwoch, 07. Juni 2023 22:49:19</h2>
+<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Donnerstag, 08. Juni 2023 08:43:14</h2>
 <table id="tableWithIpNr">
 <tr>
-<th>Servername</th><th>IPNr</th><th>IP-Port 4 Connection</th><th>IP-Port 4 Listening</th><th>IP-Datum</th><th>IP-Uhrzeit</th>
+<th>Servername</th><th>IP Adresse</th><th>IP-Port 4 Connection</th><th>IP-Port 4 Listening</th><th>IP-Datum</th><th>IP-Uhrzeit</th>
 </tr>
 <tr>
 <td headers="">test1</td><td headers="IPNr"><a href="79.196.199.114">79.196.199.114</a></td><td headers="">5000</td><td headers="">5001</td><td headers="">2017-1-4</td><td headers="">9:32</td>
