HashMap aus Java an XSLT übergeben per Transformer-Objekt
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
+++ b/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
@@ -1,20 +1,20 @@
-<html xmlns:date="http://exslt.org/dates-and-times">
+<html xmlns:java="http://xml.apache.org/xalan/java" xmlns:xalan="http://xml.apache.org/xalan" xmlns:date="http://exslt.org/dates-and-times">
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" type="text/css" href="./styles.css">
+<link href="./styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <h1 style="font-size:20pt;color:#FF0000">IP-Adressen der Server</h1>
-<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Donnerstag, 08. Juni 2023 08:43:14</h2>
+<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Freitag, 09. Juni 2023 20:44:30</h2>
 <table id="tableWithIpNr">
 <tr>
-<th>Servername</th><th>IP Adresse</th><th>IP-Port 4 Connection</th><th>IP-Port 4 Listening</th><th>IP-Datum</th><th>IP-Uhrzeit</th>
+<th>Name des Severs</th><th>IP Adresse</th><th>Port f&uuml;r Verbindung</th><th>Port f&uuml;r Listener</th><th>IP Datum</th><th>IP Zeit</th>
 </tr>
 <tr>
-<td headers="">test1</td><td headers="IPNr"><a href="79.196.199.114">79.196.199.114</a></td><td headers="">5000</td><td headers="">5001</td><td headers="">2017-1-4</td><td headers="">9:32</td>
+<td headers="ServerName">test1</td><td headers="IPNr"><a href="79.196.199.114">79.196.199.114</a></td><td headers="IPPortConnect">5000</td><td headers="IPPortListen">5001</td><td headers="IPDate">2017-1-4</td><td headers="IPTime">9:32</td>
 </tr>
 <tr>
-<td headers="">neuer test</td><td headers="IPNr"><a href="79.196.199.222">79.196.199.222</a></td><td headers="">5002</td><td headers="">5012</td><td headers="">2017-1-5</td><td headers="">9:59</td>
+<td headers="ServerName">neuer test</td><td headers="IPNr"><a href="79.196.199.222">79.196.199.222</a></td><td headers="IPPortConnect">5002</td><td headers="IPPortListen">5012</td><td headers="IPDate">2017-1-5</td><td headers="IPTime">9:59</td>
 </tr>
 </table>
 </body>
