--- a/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
+++ b/JAZLanguageMarkup/tryout/basic/zKernel/html/reader/pagHtmlTableTagGenerated4Debug.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <h1 style="font-size:20pt;color:#FF0000">IP-Adressen der Server</h1>
-<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Freitag, 09. Juni 2023 20:44:30</h2>
+<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Sonntag, 11. Juni 2023 09:21:22</h2>
 <table id="tableWithIpNr">
 <tr>
-<th>Name des Severs</th><th>IP Adresse</th><th>Port f&uuml;r Verbindung</th><th>Port f&uuml;r Listener</th><th>IP Datum</th><th>IP Zeit</th>
+<th>IP Adresse</th><th>Name des Severs</th><th>Port f&uuml;r Listener</th><th>Port f&uuml;r Verbindung</th><th>IP Datum</th><th>IP Zeit</th>
 </tr>
 <tr>
 <td headers="ServerName">test1</td><td headers="IPNr"><a href="79.196.199.114">79.196.199.114</a></td><td headers="IPPortConnect">5000</td><td headers="IPPortListen">5001</td><td headers="IPDate">2017-1-4</td><td headers="IPTime">9:32</td>
