Reihenfolge der Tabellenspalten nun wirklich so wie in ini-Datei definiert
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/tryout/use/zKernel/html/step01/writer/pagHtmlTableTagGenerated4Debug.html
+++ b/JAZLanguageMarkup/tryout/use/zKernel/html/step01/writer/pagHtmlTableTagGenerated4Debug.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <h1 style="font-size:20pt;color:#FF0000">IP-Adressen der Server</h1>
-<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Samstag, 17. Juni 2023 21:16:58</h2>
+<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Sonntag, 18. Juni 2023 17:30:53</h2>
 <table id="tableWithIpNr">
 <tr>
-<th>Name des Servers</th><th>IP Adresse</th><th>Port f&uuml;r Listener</th><th>Port f&uuml;r Verbindung</th><th>IP Datum</th><th>IP Zeit</th>
+<th>Name des Servers</th><th>IP-Adresse</th><th>Port f&uuml;r Listener</th><th>Port f&uuml;r Verbindung</th><th>Datum</th><th>Zeit</th>
 </tr>
 <tr>
 <td headers="ServerName">test1</td><td headers="IPNr"><a href="79.196.199.114">79.196.199.114</a></td><td headers="IPPortListen">5001</td><td headers="IPPortConnect">5000</td><td headers="IPDate">2017-1-4</td><td headers="IPTime">9:32</td>
