Bei der Umstellung von JAZxJob-Projekt und der Struktur der Klassen sinnvolle Erweiterungen Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/src/use/zKernel/html/step01/writer/pagHtmlTableTagGenerated4Debug.html
+++ b/JAZLanguageMarkup/src/use/zKernel/html/step01/writer/pagHtmlTableTagGenerated4Debug.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1 style="font-size:20pt;color:#FF0000">IP-Adressen der Server</h1>
-<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Dienstag, 27. Juni 2023 10:57:22</h2>
+<h2 style="font-size:20pt;color:#FF0000">Erstellt am: Mittwoch, 28. Juni 2023 10:49:36</h2>
 <table id="tableWithIpNr">
 <tr>
 <th>Name des Servers</th><th>IP-Adresse</th><th>Port f&uuml;r Listener</th><th>Port f&uuml;r Verbindung</th><th>Datum</th><th>Zeit</th>
